--- a/project/res/values-es/strings.xml
+++ b/project/res/values-es/strings.xml
@@ -1145,6 +1145,8 @@
     <string name="log_out">Cerrar sesión</string>
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">¡Con este viaje conseguirás %1$s puntos!</string>
+    <!-- Blurb text displayed on account login button when already logged in -->
+    <string name="x_points_for_this_trip_TEMPLATE">%1$s puntos por este viaje.</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">¡Conseguirás puntos extra por esta reserva!</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
@@ -2049,6 +2051,8 @@
     <!-- Expedia Accounts -->
     <!-- Label for menu item to log into account -->
     <string name="log_in">Iniciar sesión</string>
+    <!-- Login blurb: descriptive second line of text on login button on larger screens -->
+    <string name="Earn_points_and_book_fast">Consigue puntos y reserva aún más rápido.</string>
     <!-- Hint for user to enter password into a field -->
     <string name="hint_password">Contraseña</string>
     <!-- Progress dialog text when we are logging the user into Expedia -->
@@ -2098,7 +2102,7 @@
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
     <string name="coupon_error_no_code">No es posible aplicar el cupón.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
-    <string name="coupon_error_unrecognized">Lo sentimos, pero este código de descuento no es válido..</string>
+    <string name="coupon_error_unrecognized">Lo sentimos, pero este código de descuento no es válido.</string>
     <!-- Error when applying coupon - the coupon has expired -->
     <string name="coupon_error_expired">Lo sentimos, pero este código de descuento ha caducado..</string>
     <!-- Error when applying coupon - we're having some problems internally and can't handle the coupon -->
@@ -2123,6 +2127,8 @@
     <string name="coupon_error_hotel_excluded">Lo sentimos, pero este hotel no acepta cupones de descuento..</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Lo sentimos, pero no podemos aplicar cupones de descuento en este momento.  Vuelve a intentarlo.</string>
+    <!-- Error when applying coupon - session timeout -->
+    <string name="coupon_error_service_timeout">Se ha superado el tiempo de espera y no se ha podido aplicar el código. Vuelve a intentarlo.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Number of adults label -->
@@ -3044,17 +3050,23 @@
     <!-- Tablet Confirmation Screen -->
     <!-- Header text to indicating booking confirmed for hotel -->
     <string name="tablet_confirmation_hotel_booked">¡Tu hotel ya está reservado!</string>
-    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
-    <string name="tablet_confirmation_summary">%1$s, %2$s%3$s</string>
+    <!-- Header text to indicating booking confirmed for flight -->
+    <string name="tablet_confirmation_flight_booked">¡Tu hotel ya está reservado!</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date-->
+    <string name="tablet_confirmation_summary">%1$s, %2$s</string>
     <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
     <string name="tablet_itinerary_confirmation_TEMPLATE">Hemos enviado el itinerario número %1$s a la dirección %2$s</string>
-    <!-- Share button text -->
-    <string name="tablet_confirmation_share">Compartir tu estancia</string>
+    <!-- Share button text for hotels -->
+    <string name="tablet_confirmation_share_hotel">Compartir estancia</string>
+    <!-- Share button text for flights -->
+    <string name="tablet_confirmation_share_flight">Compartir vuelo</string>
     <!-- Call support button text -->
     <string name="tablet_confirmation_call_support">Asistencia</string>
     <!-- Book Next Item button text -->
     <string name="tablet_confirmation_book_next">Hacer otra reserva</string>
     <!-- Done Booking button text -->
     <string name="tablet_confirmation_done_booking">Salir</string>
+    <!-- Used in summary text for Flights {X to Y} %1$s is Departure city, %2$s is Arrival City -->
+    <string name="tablet_confirmation_flights_from_to">%1$s - %2$s</string>
 
 </resources>
