--- a/project/res/values-nl/strings.xml
+++ b/project/res/values-nl/strings.xml
@@ -1144,6 +1144,8 @@
     <string name="log_out">Afmelden</string>
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">Je verdient %1$s punten voor deze reis!</string>
+    <!-- Blurb text displayed on account login button when already logged in -->
+    <string name="x_points_for_this_trip_TEMPLATE">%1$s punten deze reis!</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">Je verdient bonuspunten voor deze reis</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
@@ -2048,6 +2050,8 @@
     <!-- Expedia Accounts -->
     <!-- Label for menu item to log into account -->
     <string name="log_in">Aanmelden</string>
+    <!-- Login blurb: descriptive second line of text on login button on larger screens -->
+    <string name="Earn_points_and_book_fast">Verdien punten en boek snel.</string>
     <!-- Hint for user to enter password into a field -->
     <string name="hint_password">Wachtwoord</string>
     <!-- Progress dialog text when we are logging the user into Expedia -->
@@ -2097,7 +2101,7 @@
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
     <string name="coupon_error_no_code">Sorry, maar de coupon kan niet worden toegepast.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
-    <string name="coupon_error_unrecognized">Sorry, maar dit is geen gekende couponcode.</string>
+    <string name="coupon_error_unrecognized">Sorry, maar dit is geen geldige couponcode.</string>
     <!-- Error when applying coupon - the coupon has expired -->
     <string name="coupon_error_expired">Sorry, maar deze coupon is verlopen.</string>
     <!-- Error when applying coupon - we're having some problems internally and can't handle the coupon -->
@@ -2122,6 +2126,8 @@
     <string name="coupon_error_hotel_excluded">Sorry, maar dit hotel aanvaardt geen coupons.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Sorry, maar we kunnen coupons op dit moment niet verwerken. Probeer het opnieuw.</string>
+    <!-- Error when applying coupon - session timeout -->
+    <string name="coupon_error_service_timeout">Sorry, maar het duurde te lang om de code toe te passen. Probeer het opnieuw.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Number of adults label -->
@@ -3043,17 +3049,23 @@
     <!-- Tablet Confirmation Screen -->
     <!-- Header text to indicating booking confirmed for hotel -->
     <string name="tablet_confirmation_hotel_booked">Je hotel is geboekt!</string>
-    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
-    <string name="tablet_confirmation_summary">%1$s, %2$s voor %3$s</string>
+    <!-- Header text to indicating booking confirmed for flight -->
+    <string name="tablet_confirmation_flight_booked">Je vlucht is geboekt!</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date-->
+    <string name="tablet_confirmation_summary">%1$s, %2$s</string>
     <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
     <string name="tablet_itinerary_confirmation_TEMPLATE">Reisplannr. %1$s verstuurd naar %2$s</string>
-    <!-- Share button text -->
-    <string name="tablet_confirmation_share">Boeking delen</string>
+    <!-- Share button text for hotels -->
+    <string name="tablet_confirmation_share_hotel">Boeking delen</string>
+    <!-- Share button text for flights -->
+    <string name="tablet_confirmation_share_flight">Delen</string>
     <!-- Call support button text -->
     <string name="tablet_confirmation_call_support">Bel Support</string>
     <!-- Book Next Item button text -->
     <string name="tablet_confirmation_book_next">Boek volgende item</string>
     <!-- Done Booking button text -->
     <string name="tablet_confirmation_done_booking">Klaar met boeken</string>
+    <!-- Used in summary text for Flights {X to Y} %1$s is Departure city, %2$s is Arrival City -->
+    <string name="tablet_confirmation_flights_from_to">%1$s naar %2$s</string>
 
 </resources>
