--- a/project/res/values-vi-rVN/strings.xml
+++ b/project/res/values-vi-rVN/strings.xml
@@ -1144,6 +1144,8 @@
     <string name="log_out">Thoát</string>
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">Quý vị sẽ nhận %1$s điểm cho chuyến đi này!</string>
+    <!-- Blurb text displayed on account login button when already logged in -->
+    <string name="x_points_for_this_trip_TEMPLATE">%1$s điểm cho chuyến đi này!</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">Quý vị sẽ nhận điểm thưởng với lần đặt này</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
@@ -2048,6 +2050,8 @@
     <!-- Expedia Accounts -->
     <!-- Label for menu item to log into account -->
     <string name="log_in">Đăng nhập</string>
+    <!-- Login blurb: descriptive second line of text on login button on larger screens -->
+    <string name="Earn_points_and_book_fast">Nhận điểm và đặt nhanh hơn.</string>
     <!-- Hint for user to enter password into a field -->
     <string name="hint_password">Mật khẩu</string>
     <!-- Progress dialog text when we are logging the user into Expedia -->
@@ -2097,7 +2101,7 @@
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
     <string name="coupon_error_no_code">Rất tiếc, không thể áp dụng coupon.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
-    <string name="coupon_error_unrecognized">Rất tiếc, mã coupon này không hợp lệ.</string>
+    <string name="coupon_error_unrecognized">Rất tiếc, đây không phải mã coupon hợp lệ.</string>
     <!-- Error when applying coupon - the coupon has expired -->
     <string name="coupon_error_expired">Rất tiếc, coupon này đã hết hạn.</string>
     <!-- Error when applying coupon - we're having some problems internally and can't handle the coupon -->
@@ -2122,6 +2126,8 @@
     <string name="coupon_error_hotel_excluded">Rất tiếc, khách sạn này không chấp nhận coupon.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Rất tiếc, hiện chúng tôi không thể xử lý coupon.  Vui lòng thử lại.</string>
+    <!-- Error when applying coupon - session timeout -->
+    <string name="coupon_error_service_timeout">Rất tiếc, đã mất khá nhiều thời gian để áp dụng mã này. Vui lòng thử lại.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Number of adults label -->
@@ -3043,17 +3049,23 @@
     <!-- Tablet Confirmation Screen -->
     <!-- Header text to indicating booking confirmed for hotel -->
     <string name="tablet_confirmation_hotel_booked">Đã đặt phòng khách sạn cho quý vị!</string>
-    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
-    <string name="tablet_confirmation_summary">%1$s, %2$s cho %3$s</string>
+    <!-- Header text to indicating booking confirmed for flight -->
+    <string name="tablet_confirmation_flight_booked">Đã đặt chuyến bay của quý vị!</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date-->
+    <string name="tablet_confirmation_summary">%1$s, %2$s</string>
     <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
     <string name="tablet_itinerary_confirmation_TEMPLATE">Đã gửi lịch trình số %1$s đến %2$s</string>
-    <!-- Share button text -->
-    <string name="tablet_confirmation_share">Chia sẻ thời gian lưu trú</string>
+    <!-- Share button text for hotels -->
+    <string name="tablet_confirmation_share_hotel">Chia sẻ thời gian lưu trú</string>
+    <!-- Share button text for flights -->
+    <string name="tablet_confirmation_share_flight">Chia sẻ chuyến bay</string>
     <!-- Call support button text -->
     <string name="tablet_confirmation_call_support">Gọi Hỗ trợ</string>
     <!-- Book Next Item button text -->
     <string name="tablet_confirmation_book_next">Đặt yêu cầu tiếp theo</string>
     <!-- Done Booking button text -->
     <string name="tablet_confirmation_done_booking">Hoàn tất đặt</string>
+    <!-- Used in summary text for Flights {X to Y} %1$s is Departure city, %2$s is Arrival City -->
+    <string name="tablet_confirmation_flights_from_to">%1$s đến %2$s</string>
 
 </resources>
