--- a/project/res/values-zh/strings.xml
+++ b/project/res/values-zh/strings.xml
@@ -645,9 +645,9 @@
     <string name="car_category_oversize">特大型车</string>
 
     <!-- Car types -->
-    <string name="car_type_two_door">两个门轿车</string>
-    <string name="car_type_three_door">三个门轿车</string>
-    <string name="car_type_four_door">四个门轿车</string>
+    <string name="car_type_two_door">双门轿车</string>
+    <string name="car_type_three_door">三门轿车</string>
+    <string name="car_type_four_door">四门轿车</string>
     <string name="car_type_van">箱型车</string>
     <string name="car_type_wagon">旅行车</string>
     <string name="car_type_limousine">豪华轿车</string>
@@ -1144,6 +1144,8 @@
     <string name="log_out">退出</string>
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">此次旅行将累积 %1$s 分！</string>
+    <!-- Blurb text displayed on account login button when already logged in -->
+    <string name="x_points_for_this_trip_TEMPLATE">此次旅行积 %1$s 分！</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">此次预订可以累积奖励积分！</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
@@ -2048,6 +2050,8 @@
     <!-- Expedia Accounts -->
     <!-- Label for menu item to log into account -->
     <string name="log_in">登录</string>
+    <!-- Login blurb: descriptive second line of text on login button on larger screens -->
+    <string name="Earn_points_and_book_fast">快捷预订，轻松积分。</string>
     <!-- Hint for user to enter password into a field -->
     <string name="hint_password">密码</string>
     <!-- Progress dialog text when we are logging the user into Expedia -->
@@ -2097,7 +2101,7 @@
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
     <string name="coupon_error_no_code">很抱歉，优惠券无法使用。</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
-    <string name="coupon_error_unrecognized">很抱歉，这不是已知的优惠券代码。</string>
+    <string name="coupon_error_unrecognized">很抱歉，此优惠代码无效。</string>
     <!-- Error when applying coupon - the coupon has expired -->
     <string name="coupon_error_expired">很抱歉，该优惠券已过期。</string>
     <!-- Error when applying coupon - we're having some problems internally and can't handle the coupon -->
@@ -2122,6 +2126,8 @@
     <string name="coupon_error_hotel_excluded">很抱歉，该酒店不接受优惠券。</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">很抱歉，我们当前无法处理优惠券。请再试一次。</string>
+    <!-- Error when applying coupon - session timeout -->
+    <string name="coupon_error_service_timeout">很抱歉，计算代码的时间超时了。请再试一次。</string>
 
     <!-- Sharing bookings via email -->
     <!-- Number of adults label -->
@@ -3043,17 +3049,23 @@
     <!-- Tablet Confirmation Screen -->
     <!-- Header text to indicating booking confirmed for hotel -->
     <string name="tablet_confirmation_hotel_booked">酒店预订完成</string>
-    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
-    <string name="tablet_confirmation_summary">%3$s 人，%2$s入住%1$s</string>
+    <!-- Header text to indicating booking confirmed for flight -->
+    <string name="tablet_confirmation_flight_booked">机票预订完成！</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date-->
+    <string name="tablet_confirmation_summary">%1$s, %2$s</string>
     <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
     <string name="tablet_itinerary_confirmation_TEMPLATE">行程单 %1$s 已发送到%2$s</string>
-    <!-- Share button text -->
-    <string name="tablet_confirmation_share">分享行程</string>
+    <!-- Share button text for hotels -->
+    <string name="tablet_confirmation_share_hotel">分享酒店</string>
+    <!-- Share button text for flights -->
+    <string name="tablet_confirmation_share_flight">分享航班</string>
     <!-- Call support button text -->
     <string name="tablet_confirmation_call_support">致电支持服务部</string>
     <!-- Book Next Item button text -->
     <string name="tablet_confirmation_book_next">继续预订</string>
     <!-- Done Booking button text -->
     <string name="tablet_confirmation_done_booking">完成预订</string>
+    <!-- Used in summary text for Flights {X to Y} %1$s is Departure city, %2$s is Arrival City -->
+    <string name="tablet_confirmation_flights_from_to">%1$s - %2$s</string>
 
 </resources>
