--- a/project/res/values-in/strings.xml
+++ b/project/res/values-in/strings.xml
@@ -1144,6 +1144,8 @@
     <string name="log_out">Keluar</string>
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">Anda akan mendapatkan %1$s poin untuk perjalanan ini!</string>
+    <!-- Blurb text displayed on account login button when already logged in -->
+    <string name="x_points_for_this_trip_TEMPLATE">%1$s poin untuk perjalanan ini!</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">Anda akan mendapatkan poin bonus untuk pemesanan ini</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
@@ -2048,6 +2050,8 @@
     <!-- Expedia Accounts -->
     <!-- Label for menu item to log into account -->
     <string name="log_in">Masuk</string>
+    <!-- Login blurb: descriptive second line of text on login button on larger screens -->
+    <string name="Earn_points_and_book_fast">Dapatkan poin dan pesan dengan cepat.</string>
     <!-- Hint for user to enter password into a field -->
     <string name="hint_password">Kata Sandi</string>
     <!-- Progress dialog text when we are logging the user into Expedia -->
@@ -2097,7 +2101,7 @@
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
     <string name="coupon_error_no_code">Maaf, kupon tidak bisa digunakan.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
-    <string name="coupon_error_unrecognized">Maaf, tapi kode kupon ini tidak kami kenali.</string>
+    <string name="coupon_error_unrecognized">Maaf, namun kode kupon ini tidak valid.</string>
     <!-- Error when applying coupon - the coupon has expired -->
     <string name="coupon_error_expired">Maaf, tapi kode kupon ini telah kedaluwarsa.</string>
     <!-- Error when applying coupon - we're having some problems internally and can't handle the coupon -->
@@ -2122,6 +2126,8 @@
     <string name="coupon_error_hotel_excluded">Maaf, hotel ini tidak menerima kupon.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Maaf, tapi untuk saat ini kami tidak bisa memproses kupon Harap coba lagi.</string>
+    <!-- Error when applying coupon - session timeout -->
+    <string name="coupon_error_service_timeout">Maaf, namun penerapan kode memerlukan waktu terlalu lama. Coba lagi.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Number of adults label -->
@@ -3043,17 +3049,23 @@
     <!-- Tablet Confirmation Screen -->
     <!-- Header text to indicating booking confirmed for hotel -->
     <string name="tablet_confirmation_hotel_booked">Hotel Anda telah dipesan!</string>
-    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
-    <string name="tablet_confirmation_summary">%1$s, %2$s untuk %3$s</string>
+    <!-- Header text to indicating booking confirmed for flight -->
+    <string name="tablet_confirmation_flight_booked">Penerbangan Anda telah dipesan!</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date-->
+    <string name="tablet_confirmation_summary">%1$s, %2$s</string>
     <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
     <string name="tablet_itinerary_confirmation_TEMPLATE">Rencana perjalanan no. %1$s telah dikirim ke %2$s</string>
-    <!-- Share button text -->
-    <string name="tablet_confirmation_share">Bagikan Pengalaman Menginap</string>
+    <!-- Share button text for hotels -->
+    <string name="tablet_confirmation_share_hotel">Bagikan Pengalaman Menginap</string>
+    <!-- Share button text for flights -->
+    <string name="tablet_confirmation_share_flight">Bagikan Pengalaman Penerbangan</string>
     <!-- Call support button text -->
     <string name="tablet_confirmation_call_support">Hubungi Bantuan</string>
     <!-- Book Next Item button text -->
     <string name="tablet_confirmation_book_next">Pesan Item Berikutnya</string>
     <!-- Done Booking button text -->
     <string name="tablet_confirmation_done_booking">Selesaikan Pemesanan</string>
+    <!-- Used in summary text for Flights {X to Y} %1$s is Departure city, %2$s is Arrival City -->
+    <string name="tablet_confirmation_flights_from_to">%1$s ke %2$s</string>
 
 </resources>
