--- a/project/res/values-it/strings.xml
+++ b/project/res/values-it/strings.xml
@@ -1144,6 +1144,8 @@
     <string name="log_out">Disconnessione da</string>
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">Per questo viaggio riceverai %1$s crediti!</string>
+    <!-- Blurb text displayed on account login button when already logged in -->
+    <string name="x_points_for_this_trip_TEMPLATE">Riceverai %1$s crediti per questo viaggio!</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">Per questo viaggio riceverai crediti bonus!</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
@@ -2048,6 +2050,8 @@
     <!-- Expedia Accounts -->
     <!-- Label for menu item to log into account -->
     <string name="log_in">Accedi</string>
+    <!-- Login blurb: descriptive second line of text on login button on larger screens -->
+    <string name="Earn_points_and_book_fast">Guadagna crediti e prenota con rapidità.</string>
     <!-- Hint for user to enter password into a field -->
     <string name="hint_password">Password</string>
     <!-- Progress dialog text when we are logging the user into Expedia -->
@@ -2097,7 +2101,7 @@
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
     <string name="coupon_error_no_code">Spiacenti, il coupon non può essere utilizzato.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
-    <string name="coupon_error_unrecognized">Impossibile riconoscere il coupon..</string>
+    <string name="coupon_error_unrecognized">Siamo spiacenti, ma questo coupon non è valido.</string>
     <!-- Error when applying coupon - the coupon has expired -->
     <string name="coupon_error_expired">Siamo spiacenti, ma questo coupon è scaduto. .</string>
     <!-- Error when applying coupon - we're having some problems internally and can't handle the coupon -->
@@ -2122,6 +2126,8 @@
     <string name="coupon_error_hotel_excluded">Siamo spiacenti, ma l\&apos;hotel selezionato non accetta coupon..</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Siamo spiacenti, ma al momento non ci è possibile gestire i coupon. Riprova in seguito..</string>
+    <!-- Error when applying coupon - session timeout -->
+    <string name="coupon_error_service_timeout">Siamo spiacenti, ma l\&apos;applicazione del codice ha impiegato troppo tempo. Riprova.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Number of adults label -->
@@ -3043,17 +3049,23 @@
     <!-- Tablet Confirmation Screen -->
     <!-- Header text to indicating booking confirmed for hotel -->
     <string name="tablet_confirmation_hotel_booked">Hotel prenotato!</string>
-    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
-    <string name="tablet_confirmation_summary">%1$s, %2$s per %3$s</string>
+    <!-- Header text to indicating booking confirmed for flight -->
+    <string name="tablet_confirmation_flight_booked">Volo prenotato!</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date-->
+    <string name="tablet_confirmation_summary">%1$s, %2$s</string>
     <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
     <string name="tablet_itinerary_confirmation_TEMPLATE">Itinerario #%1$s inviato all\&apos;indirizzo %2$s</string>
-    <!-- Share button text -->
-    <string name="tablet_confirmation_share">Condividi</string>
+    <!-- Share button text for hotels -->
+    <string name="tablet_confirmation_share_hotel">Condividi</string>
+    <!-- Share button text for flights -->
+    <string name="tablet_confirmation_share_flight">Condividi</string>
     <!-- Call support button text -->
     <string name="tablet_confirmation_call_support">Chiama il supporto</string>
     <!-- Book Next Item button text -->
     <string name="tablet_confirmation_book_next">Altra prenotazione</string>
     <!-- Done Booking button text -->
     <string name="tablet_confirmation_done_booking">Fine</string>
+    <!-- Used in summary text for Flights {X to Y} %1$s is Departure city, %2$s is Arrival City -->
+    <string name="tablet_confirmation_flights_from_to">Itinerario di %1$s per %2$s</string>
 
 </resources>
