--- a/project/res/values-nb/strings.xml
+++ b/project/res/values-nb/strings.xml
@@ -1144,6 +1144,8 @@
     <string name="log_out">Logg av</string>
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">Du vil opptjene %1$s poeng for denne reisen!</string>
+    <!-- Blurb text displayed on account login button when already logged in -->
+    <string name="x_points_for_this_trip_TEMPLATE">%1$s poeng for denne reisen!</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">Du vil tjene opp bonuspoeng for denne bestillingen</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
@@ -2048,6 +2050,8 @@
     <!-- Expedia Accounts -->
     <!-- Label for menu item to log into account -->
     <string name="log_in">Logg på</string>
+    <!-- Login blurb: descriptive second line of text on login button on larger screens -->
+    <string name="Earn_points_and_book_fast">Tjen opp poeng og bestill hurtig.</string>
     <!-- Hint for user to enter password into a field -->
     <string name="hint_password">Passord</string>
     <!-- Progress dialog text when we are logging the user into Expedia -->
@@ -2097,7 +2101,7 @@
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
     <string name="coupon_error_no_code">Beklager, kupongen kan ikke brukes.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
-    <string name="coupon_error_unrecognized">Beklager, dette er ikke en kjent kupongkode.</string>
+    <string name="coupon_error_unrecognized">Beklager, dette er ikke en gyldig kupongkode.</string>
     <!-- Error when applying coupon - the coupon has expired -->
     <string name="coupon_error_expired">Beklager, kupongen er utløpt.</string>
     <!-- Error when applying coupon - we're having some problems internally and can't handle the coupon -->
@@ -2122,6 +2126,8 @@
     <string name="coupon_error_hotel_excluded">Beklager, dette hotellet godtar ikke kuponger.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Beklager, det var ikke mulig å lese kupongkoden.  Prøv på nytt.</string>
+    <!-- Error when applying coupon - session timeout -->
+    <string name="coupon_error_service_timeout">Beklager, det tok for lang tid å legge til kupongkoden. Prøv på nytt.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Number of adults label -->
@@ -3043,17 +3049,23 @@
     <!-- Tablet Confirmation Screen -->
     <!-- Header text to indicating booking confirmed for hotel -->
     <string name="tablet_confirmation_hotel_booked">Hotellbestillingen din er utført.</string>
-    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
-    <string name="tablet_confirmation_summary">%1$s, %2$s for %3$s</string>
+    <!-- Header text to indicating booking confirmed for flight -->
+    <string name="tablet_confirmation_flight_booked">Flybestillingen din er fullført!</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date-->
+    <string name="tablet_confirmation_summary">%1$s, %2$s</string>
     <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
     <string name="tablet_itinerary_confirmation_TEMPLATE">Reiserutenummer %1$s sendt til %2$s</string>
-    <!-- Share button text -->
-    <string name="tablet_confirmation_share">Del oppholdet</string>
+    <!-- Share button text for hotels -->
+    <string name="tablet_confirmation_share_hotel">Del oppholdet</string>
+    <!-- Share button text for flights -->
+    <string name="tablet_confirmation_share_flight">Del flyvning</string>
     <!-- Call support button text -->
     <string name="tablet_confirmation_call_support">Ring support</string>
     <!-- Book Next Item button text -->
     <string name="tablet_confirmation_book_next">Bestill neste</string>
     <!-- Done Booking button text -->
     <string name="tablet_confirmation_done_booking">Bestilling utført</string>
+    <!-- Used in summary text for Flights {X to Y} %1$s is Departure city, %2$s is Arrival City -->
+    <string name="tablet_confirmation_flights_from_to">%1$s til %2$s</string>
 
 </resources>
